force-app/main/default/objects/Claim_Line__c/fields/medicare_claimItems_itemCode__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimItems_itemCode__c</fullName>
    <formula>Linked_Finance_Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>medicare.claimItems.itemCode</label>
    <type>Text</type>
</CustomField>