force-app/main/default/objects/Claim_Line__c/fields/medicare_claimItems_price__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimItems_price__c</fullName>
    <formula>TEXT(Linked_Finance_Item__r.Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>medicare.claimItems.price</label>
    <type>Text</type>
</CustomField>