force-app/main/default/objects/Claim_Line__c/fields/medicare_claimItems_reference__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimItems_reference__c</fullName>
    <formula>Linked_Finance_Item__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>medicare.claimItems.reference</label>
    <type>Text</type>
</CustomField>