force-app/main/default/objects/Claim_Line__c/fields/medicare_claimItems_rule3ExemptIndicator__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimItems_rule3ExemptIndicator__c</fullName>
    <label>medicare.claimItems.rule3ExemptIndicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>