force-app/main/default/objects/Claim_Line__c/fields/medicare_claimItems_s4b3ExemptIndicator__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimItems_s4b3ExemptIndicator__c</fullName>
    <label>medicare.claimItems.s4b3ExemptIndicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>