force-app/main/default/objects/Claim_Line__c/fields/medicare_claimItems_serviceDate__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimItems_serviceDate__c</fullName>
    <formula>TEXT(YEAR(Linked_Finance_Item__r.Date_of_Service__c)) &amp; &quot;-&quot; &amp;
LPAD(TEXT(MONTH(Linked_Finance_Item__r.Date_of_Service__c)), 2, &apos;0&apos;) &amp; &quot;-&quot; &amp;
LPAD(TEXT(DAY(Linked_Finance_Item__r.Date_of_Service__c)), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>medicare.claimItems.serviceDate</label>
    <type>Text</type>
</CustomField>