force-app/main/default/objects/Claim_Line__c/fields/medicare_claimItems_serviceText__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimItems_serviceText__c</fullName>
    <formula>Linked_Finance_Item__r.Claim__r.Claim_Service_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>medicare.claimItems.serviceText</label>
    <type>Text</type>
</CustomField>