force-app/main/default/objects/Claim_Line__c/fields/medicare_claimType__c.field-meta.xml
<CustomField>
    <fullName>medicare_claimType__c</fullName>
    <formula>IF( TEXT(Linked_Finance_Item__r.Claim_Type__c) = &quot;Patient Claim&quot;, &quot;patientclaim&quot;, IF( TEXT(Linked_Finance_Item__r.Claim_Type__c) = &quot;Bulkbill&quot;,&quot;bulkbill&quot;,NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>medicare.claimType</label>
    <type>Text</type>
</CustomField>