force-app/main/default/objects/Claim_Line__c/fields/medicare_isInHospital__c.field-meta.xml
<CustomField>
    <fullName>medicare_isInHospital__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>medicare.isInHospital</label>
    <type>Text</type>
</CustomField>