force-app/main/default/objects/Claim_Line__c/fields/medicare_referral_issueDateString__c.field-meta.xml
<CustomField>
    <fullName>medicare_referral_issueDateString__c</fullName>
    <formula>TEXT(YEAR( Linked_Finance_Item__r.Linked_Referral__r.Referral_Date__c)) &amp; &quot;-&quot; &amp;
LPAD(TEXT(MONTH( Linked_Finance_Item__r.Linked_Referral__r.Referral_Date__c)), 2, &apos;0&apos;) &amp; &quot;-&quot; &amp;
LPAD(TEXT(DAY( Linked_Finance_Item__r.Linked_Referral__r.Referral_Date__c)), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>medicare.referral.issueDateString</label>
    <type>Text</type>
</CustomField>