force-app/main/default/objects/Claim_Line__c/fields/medicare_referral_period__c.field-meta.xml
<CustomField>
    <fullName>medicare_referral_period__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>medicare.referral.period</label>
    <type>Text</type>
</CustomField>