force-app/main/default/objects/Claim_Line__c/fields/medicare_referral_periodType__c.field-meta.xml
<CustomField>
    <fullName>medicare_referral_periodType__c</fullName>
    <formula>IF(TEXT( Linked_Finance_Item__r.Linked_Referral__r.Referral_Length__c )= &quot;Indefinite&quot; ,&quot;I&quot;,&quot;S&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>medicare.referral.periodType</label>
    <type>Text</type>
</CustomField>