force-app/main/default/objects/Claim_Line__c/fields/medicare_referral_providerFullName__c.field-meta.xml
<CustomField>
    <fullName>medicare_referral_providerFullName__c</fullName>
    <formula>Linked_Finance_Item__r.Linked_Referral__r.Referring_Doctor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>medicare.referral.providerFullName</label>
    <type>Text</type>
</CustomField>