force-app/main/default/objects/Claim_Line__c/fields/medicare_referral_providerNumber__c.field-meta.xml
<CustomField>
    <fullName>medicare_referral_providerNumber__c</fullName>
    <formula>Linked_Finance_Item__r.Patient__r.Current_Referral__r.Referring_Doctor__r.Provider_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>medicare.referral.providerNumber</label>
    <type>Text</type>
</CustomField>