force-app/main/default/objects/Claim_Line__c/fields/medicare_referral_referrerType__c.field-meta.xml
<CustomField>
    <fullName>medicare_referral_referrerType__c</fullName>
    <formula>IF(TEXT( Linked_Finance_Item__r.Linked_Referral__r.Referring_Doctor__r.Type_of_Doctor__c )= &quot;Specialist&quot;, &quot;S&quot;, &quot;GP&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>medicare.referral.referrerType</label>
    <type>Text</type>
</CustomField>