force-app/main/default/objects/Claim_Line__c/fields/medicarebenetPayeeproviderName__c.field-meta.xml
<CustomField>
    <fullName>medicarebenetPayeeproviderName__c</fullName>
    <label>medicare.beneﬁtPayee.providerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>