force-app/main/default/objects/Claim_Line__c/fields/medicarebenetPayeeproviderNumber__c.field-meta.xml
<CustomField>
    <fullName>medicarebenetPayeeproviderNumber__c</fullName>
    <label>medicare.beneﬁtPayee.providerNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>