force-app/main/default/objects/Claim_Line__c/fields/medicareclaimantbankAccountaccountNam__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimantbankAccountaccountNam__c</fullName>
    <label>medicare.claimant.bankAccount.accountNam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>