force-app/main/default/objects/Claim_Line__c/fields/medicareclaimantbankAccountaccountNum__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimantbankAccountaccountNum__c</fullName>
    <label>medicare.claimant.bankAccount.accountNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>