force-app/main/default/objects/Claim_Line__c/fields/medicareclaimantbankAccountbankName__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimantbankAccountbankName__c</fullName>
    <label>medicare.claimant.bankAccount.bankName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>