force-app/main/default/objects/Claim_Line__c/fields/medicareclaimantbankAccountbsb__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimantbankAccountbsb__c</fullName>
    <label>medicare.claimant.bankAccount.bsb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>