force-app/main/default/objects/Claim_Line__c/fields/medicareclaimantdobString__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimantdobString__c</fullName>
    <label>medicare.claimant.dobString</label>
    <length>255</length>
    <type>Text</type>
</CustomField>