force-app/main/default/objects/Claim_Line__c/fields/medicareclaimanthealthFundAccountmemb__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimanthealthFundAccountmemb__c</fullName>
    <label>medicare.claimant.healthFundAccount.memb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>