force-app/main/default/objects/Claim_Line__c/fields/medicareclaimantlastName__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimantlastName__c</fullName>
    <label>medicare.claimant.lastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>