force-app/main/default/objects/Claim_Line__c/fields/medicareclaimantpostalAddresscity__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimantpostalAddresscity__c</fullName>
    <label>medicare.claimant.postalAddress.city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>