force-app/main/default/objects/Claim_Line__c/fields/medicareclaimantpostalAddresspostcode__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimantpostalAddresspostcode__c</fullName>
    <label>medicare.claimant.postalAddress.postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>