force-app/main/default/objects/Claim_Line__c/fields/medicareclaimantrstName__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimantrstName__c</fullName>
    <label>medicare.claimant.ﬁrstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>