force-app/main/default/objects/Claim_Line__c/fields/medicareclaimantsex__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimantsex__c</fullName>
    <label>medicare.claimant.sex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>