force-app/main/default/objects/Claim_Line__c/fields/medicareclaimItemsaccountReferenceNumb__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimItemsaccountReferenceNumb__c</fullName>
    <label>medicare.claimItems.accountReferenceNumb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>