force-app/main/default/objects/Claim_Line__c/fields/medicareclaimItemsafterCareOverride__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimItemsafterCareOverride__c</fullName>
    <label>medicare.claimItems.afterCareOverride</label>
    <length>255</length>
    <type>Text</type>
</CustomField>