force-app/main/default/objects/Claim_Line__c/fields/medicareclaimItemsduplicateServiceOver__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimItemsduplicateServiceOver__c</fullName>
    <label>medicare.claimItems.duplicateServiceOver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>