force-app/main/default/objects/Claim_Line__c/fields/medicareclaimItemseldQuantity__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimItemseldQuantity__c</fullName>
    <label>medicare.claimItems.ﬁeldQuantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>