force-app/main/default/objects/Claim_Line__c/fields/medicareclaimItemsisInHospital__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimItemsisInHospital__c</fullName>
    <label>medicare.claimItems.isInHospital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>