force-app/main/default/objects/Claim_Line__c/fields/medicareclaimItemsmultipleProcedureOve__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimItemsmultipleProcedureOve__c</fullName>
    <label>medicare.claimItems.multipleProcedureOve</label>
    <length>255</length>
    <type>Text</type>
</CustomField>