force-app/main/default/objects/Claim_Line__c/fields/medicareclaimItemsnumberOfPatientsSeen__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimItemsnumberOfPatientsSeen__c</fullName>
    <label>medicare.claimItems.numberOfPatientsSeen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>