force-app/main/default/objects/Claim_Line__c/fields/medicareclaimItemspatientContributionA__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimItemspatientContributionA__c</fullName>
    <label>medicare.claimItems.patientContributionA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>