force-app/main/default/objects/Claim_Line__c/fields/medicareclaimItemsrestrictiveOverride__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimItemsrestrictiveOverride__c</fullName>
    <label>medicare.claimItems.restrictiveOverride</label>
    <length>255</length>
    <type>Text</type>
</CustomField>