force-app/main/default/objects/Claim_Line__c/fields/medicareclaimItemsselfDeemed__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimItemsselfDeemed__c</fullName>
    <label>medicare.claimItems.selfDeemed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>