force-app/main/default/objects/Claim_Line__c/fields/medicareclaimItemstimeOfService__c.field-meta.xml
<CustomField>
    <fullName>medicareclaimItemstimeOfService__c</fullName>
    <label>medicare.claimItems.timeOfService</label>
    <length>255</length>
    <type>Text</type>
</CustomField>