force-app/main/default/objects/Claim_Line__c/fields/medicarenonReferraldescription__c.field-meta.xml
<CustomField>
    <fullName>medicarenonReferraldescription__c</fullName>
    <label>medicare.nonReferral.description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>