force-app/main/default/objects/Claim_Line__c/fields/medicarenonReferralreason__c.field-meta.xml
<CustomField>
    <fullName>medicarenonReferralreason__c</fullName>
    <label>medicare.nonReferral.reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>