force-app/main/default/objects/Claim_Line__c/fields/patient_dobString__c.field-meta.xml
<CustomField>
    <fullName>patient_dobString__c</fullName>
    <formula>TEXT(YEAR(Linked_Finance_Item__r.Patient__r.Birthdate)) &amp; &quot;-&quot; &amp;
LPAD(TEXT(MONTH(Linked_Finance_Item__r.Patient__r.Birthdate)), 2, &apos;0&apos;) &amp; &quot;-&quot; &amp;
LPAD(TEXT(DAY(Linked_Finance_Item__r.Patient__r.Birthdate)), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient.dobString</label>
    <type>Text</type>
</CustomField>