force-app/main/default/objects/Claim_Line__c/fields/patient_email__c.field-meta.xml
<CustomField>
    <fullName>patient_email__c</fullName>
    <formula>Linked_Finance_Item__r.Patient__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient.email</label>
    <type>Text</type>
</CustomField>