force-app/main/default/objects/Claim_Line__c/fields/patient_firstName__c.field-meta.xml
<CustomField>
    <fullName>patient_firstName__c</fullName>
    <formula>Linked_Finance_Item__r.Patient__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient.firstName</label>
    <type>Text</type>
</CustomField>