force-app/main/default/objects/Claim_Line__c/fields/patient_id__c.field-meta.xml
<CustomField>
    <fullName>patient_id__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient._id</label>
    <type>Text</type>
</CustomField>