force-app/main/default/objects/Claim_Line__c/fields/patient_identity_dobString__c.field-meta.xml
<CustomField>
    <fullName>patient_identity_dobString__c</fullName>
    <formula>Linked_Finance_Item__r.Patient__r.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient.identity.dobString</label>
    <type>Date</type>
</CustomField>