force-app/main/default/objects/Claim_Line__c/fields/patient_identity_lastName__c.field-meta.xml
<CustomField>
    <fullName>patient_identity_lastName__c</fullName>
    <formula>Linked_Finance_Item__r.Patient__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient.identity.lastName</label>
    <type>Text</type>
</CustomField>