force-app/main/default/objects/Claim_Line__c/fields/patient_identity_refId__c.field-meta.xml
<CustomField>
    <fullName>patient_identity_refId__c</fullName>
    <formula>patient_refId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient.identity.refId</label>
    <type>Text</type>
</CustomField>