force-app/main/default/objects/Claim_Line__c/fields/patient_identity_secondInitial__c.field-meta.xml
<CustomField>
    <fullName>patient_identity_secondInitial__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient.identity.secondInitial</label>
    <type>Text</type>
</CustomField>