force-app/main/default/objects/Claim_Line__c/fields/patient_medicareHealthFundAccount_cardRa__c.field-meta.xml
<CustomField>
    <fullName>patient_medicareHealthFundAccount_cardRa__c</fullName>
    <formula>TEXT(Linked_Finance_Item__r.Patient__r.Issue_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient.medicareHealthFundAccount.cardRa</label>
    <type>Text</type>
</CustomField>