force-app/main/default/objects/Claim_Line__c/fields/patient_medicareHealthFundAccount_member__c.field-meta.xml
<CustomField>
    <fullName>patient_medicareHealthFundAccount_member__c</fullName>
    <formula>Linked_Finance_Item__r.Patient__r.Medicare_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient.medicareHealthFundAccount.member</label>
    <type>Text</type>
</CustomField>