force-app/main/default/objects/Claim_Line__c/fields/patient_medicareHealthFundAccount_sex__c.field-meta.xml
<CustomField>
    <fullName>patient_medicareHealthFundAccount_sex__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient.medicareHealthFundAccount.sex</label>
    <type>Text</type>
</CustomField>