force-app/main/default/objects/Claim_Line__c/fields/patient_mobile__c.field-meta.xml
<CustomField>
    <fullName>patient_mobile__c</fullName>
    <formula>Linked_Finance_Item__r.Patient__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient.mobile</label>
    <type>Text</type>
</CustomField>