force-app/main/default/objects/Claim_Line__c/fields/patient_phiHealthFundAccount_healthFundC__c.field-meta.xml
<CustomField>
    <fullName>patient_phiHealthFundAccount_healthFundC__c</fullName>
    <formula>Linked_Finance_Item__r.Patient__r.Fund_Brand_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient.phiHealthFundAccount.healthFundC</label>
    <type>Text</type>
</CustomField>