force-app/main/default/objects/Claim_Line__c/fields/patient_phiHealthFundAccount_lastName__c.field-meta.xml
<CustomField>
    <fullName>patient_phiHealthFundAccount_lastName__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient.phiHealthFundAccount.lastName</label>
    <type>Text</type>
</CustomField>