force-app/main/default/objects/Claim_Line__c/fields/patient_phiHealthFundAccount_membershipN__c.field-meta.xml
<CustomField>
    <fullName>patient_phiHealthFundAccount_membershipN__c</fullName>
    <formula>Linked_Finance_Item__r.Patient__r.Membership_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient.phiHealthFundAccount.membershipN</label>
    <type>Text</type>
</CustomField>