force-app/main/default/objects/Claim_Line__c/fields/patient_refId__c.field-meta.xml
<CustomField>
    <fullName>patient_refId__c</fullName>
    <formula>Linked_Finance_Item__r.Patient__r.Patient_ID_Display_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient.refId</label>
    <type>Text</type>
</CustomField>