force-app/main/default/objects/Claim_Line__c/fields/patient_sex__c.field-meta.xml
<CustomField>
    <fullName>patient_sex__c</fullName>
    <formula>LEFT(TEXT( Linked_Finance_Item__r.Patient__r.Sex_at_Birth__c) ,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>patient.sex</label>
    <type>Text</type>
</CustomField>