force-app/main/default/objects/Claim_Line__c/fields/paymentMethod__c.field-meta.xml
<CustomField>
    <fullName>paymentMethod__c</fullName>
    <formula>IF(TEXT( Linked_Finance_Item__r.Claim_Type__c )=&quot;Patient Claim&quot;, &quot;in-person&quot;,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>paymentMethod</label>
    <type>Text</type>
</CustomField>