force-app/main/default/objects/Claim_Line__c/fields/providerNumber__c.field-meta.xml
<CustomField>
    <fullName>providerNumber__c</fullName>
    <formula>Linked_Finance_Item__r.Doctor_Providing_Service__r.Clinic_Provider_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>providerNumber</label>
    <type>Text</type>
</CustomField>