force-app/main/default/objects/Claim_Line__c/fields/senderContact_emailAddress__c.field-meta.xml
<CustomField>
    <fullName>senderContact_emailAddress__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>senderContact.emailAddress</label>
    <type>Text</type>
</CustomField>