force-app/main/default/objects/Claim_Line__c/fields/senderContact_phoneNumber__c.field-meta.xml
<CustomField>
    <fullName>senderContact_phoneNumber__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>senderContact.phoneNumber</label>
    <type>Text</type>
</CustomField>