force-app/main/default/objects/Claim_Line__c/fields/sequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>sequenceNumber__c</fullName>
    <formula>Linked_Finance_Item__r.Line_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sequenceNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>