force-app/main/default/objects/Claim_Line__c/fields/service__c.field-meta.xml
<CustomField>
    <fullName>service__c</fullName>
    <formula>&quot;inPatient&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>service</label>
    <type>Text</type>
</CustomField>