force-app/main/default/objects/Claim_Line__c/fields/serviceTypeCode__c.field-meta.xml
<CustomField>
    <fullName>serviceTypeCode__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>serviceTypeCode</label>
    <type>Text</type>
</CustomField>