force-app/main/default/objects/Claim_Line__c/fields/submissionAuthorityInd__c.field-meta.xml
<CustomField>
    <fullName>submissionAuthorityInd__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>submissionAuthorityInd</label>
    <type>Text</type>
</CustomField>